# call

./: Makefile  README.md  mypy.ini  pyproject.toml
data/: input_prompt.json
data/input/: function_calling_tests.json
data/output/: functions_results.json
llm_sdk/: __init__.py
moulinette/__MACOSX/moulinette/: .___init__.py
moulinette/moulinette/: README.md  __main__.py  extract_functions_infos.py  functions_definition.py  generate_tests_and_corrections.py  pyproject.toml
src/: __main__.py  args_processor.py  constrained_decoding.py  json_loader.py  parse_args.py
src/models/: functions_definiton.py
