[project]
name = "moulinette"
version = "0.1.0"
description = "Moulinette for the Call Me Maybe project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # "accelerate>=1.10.1",
    # "dspy>=3.0.3",
    "fire>=0.7.1",
    # "huggingface-hub>=0.35.0",
    "pydantic>=2.11.9",
    # "torch>=2.8.0",
    # "transformers>=4.56.2",
]
